# data-protocol

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  fk-data.d.ts  fk-data.js  fk-data.pb.dart  fk-data.pb.go  fk-data.pbenum.dart  fk-data.pbjson.dart  fk-data.proto  fk-data.proto.json  fk_data_pb2.py  go.mod  go.sum  package-lock.json  package.json
dart/: pubspec.yaml
dart/lib/: fk-data.pb.dart  fk-data.pbenum.dart  fk-data.pbjson.dart
fk_data/: FkData.java
github.com/fieldkit/data-protocol/: fk-data.pb.go
gitlab.com/fieldkit/libraries/data-protocol/: fk-data.pb.go
org/conservify/fieldkit/data/pb/: FkData.java
org/fieldkit/data/pb/: FkData.java
src/: CMakeLists.txt  fk-data-protocol.h  fk-data.pb.c  fk-data.pb.h
src/cpp/: fk-data.pb.cc  fk-data.pb.h
